# honk

./: .dockerignore  .envrc  .gitignore  Dockerfile  db_backup.sh  db_backup_upload.sh  docker-compose-production.yml  docker-compose.yml  manage.py  requirements.txt
circus/: admin.py  api_views.py  apps.py  models.py  serializers.py  urls.py  views.py  web_views.py
circus/migrations/: 0001_initial.py
circus/templates/circus/: honk.html  honks.html  magic_word.html  new_honk.html  sent_honks.html
go-cli/src/: go.mod  main.go
honk/: asgi.py  settings.py  urls.py  wsgi.py
honk-cli/: CMakeLists.txt  vcpkg.json
honk-cli/src/: main.cpp
honk-desktop/: .gitignore  honk2.py  main.py  requirements.txt  utils.py
honk-web/: .dockerignore  .envrc  .gitignore  Dockerfile  README  docker-compose-production.yml  requirements.txt
honk-web/.postman/: api  api_854866a0-161a-455d-9dfa-67be77e74098
honk-web/circus/: admin.py  forms.py  models.py  urls.py  web_views.py
honk-web/circus/migrations/: 0001_initial.py
honk-web/circus/templates/circus/: created_honk.html  honks.html
honk-web/honk/: settings.py
honk-web/postman/collections/: Honk.json
templates/: base.html
